# RTSpMSpM

./: .gitignore  LICENSE  README.md
Dockerfile/: Dockerfile  build_image.sh  run.sh  set_env.sh  start_image.sh
cuSparse/src/: Makefile  Timing.cpp  Timing.h  cuSparse  main.cpp  util.cpp
optixSpMSpM/src/: CMakeLists.txt
optixSpMSpM/src/CMake/: Findstdgpu.cmake
optixSpMSpM/src/data/amazon0312/: amazon0312_small.mtx
optixSpMSpM/src/data/ca-CondMat/: ca-CondMat_small.mtx
optixSpMSpM/src/data/email-Enron/: email-Enron_small.mtx
optixSpMSpM/src/data/mario002/: mario002_small.mtx
optixSpMSpM/src/data/p2p-Gnutella31/: p2p-Gnutella31_small.mtx
optixSpMSpM/src/data/roadNet-CA/: roadNet-CA_small.mtx
optixSpMSpM/src/data/web-Google/: web-Google_small.mtx
optixSpMSpM/src/data/webbase-1M/: webbase-1M_small.mtx
optixSpMSpM/src/data/wiki-Vote/: wiki-Vote_small.mtx
optixSpMSpM/src/optixSpMSpM/: CMakeLists.txt  README.md  Sphere.h  Util.h  custom_map.cu.old  func.h  optixSpMSpM.cpp  optixSpMSpM.cu
optixSpMSpM/src/optixSphere/: README.md  Sphere.cpp  func.h  optixSphere.cpp  optixSphere.cu  optixSphere.h  thrust_helper.cu
optixSpMSpM/src/sutil/: CMakeLists.txt  CUDAOutputBuffer.h  Exception.h  Timing.h  sutil.cpp  sutil.h
scripts/: AE_test.py  ae_run.sh  download_dataset.sh  gamma_test.py  install.sh  matrixSampling.py
